--- a/views/library_book.xml
+++ b/views/library_book.xml
@@ -20,9 +20,19 @@
                     <group>
                         <field name="name"/>
                         <field name="author_ids" widget="many2many_tags"/>
+                        <field name="state"/>
+                        <field name="pages"/>
+                        <field name="notes"/>
                     </group>
                     <group>
+                        <field name="short_name"/>
                         <field name="date_release"/>
+                        <field name="date_updated"/>
+                        <field name="cover" widget="image" class="oe_avatar"/>
+                        <field name="reader_rating"/>
+                    </group>
+                    <group>
+                        <field name="description"/>
                     </group>
                 </group>
             </form>
