--- a/reports/book_rent_report.xml
+++ b/reports/book_rent_report.xml
@@ -7,6 +7,8 @@
         <field name="report_type">qweb-pdf</field>
         <field name="report_name">colette_library.book_rents_template</field>
         <field name="report_file">colette_library.book_rents_template</field>
+        <!-- <field name="binding_model_id" ref="library_book_rent"/> -->
+        <field name="binding_type">report</field>
     </record>
 
 </odoo>
