--- a/views/library_book.xml
+++ b/views/library_book.xml
@@ -4,8 +4,14 @@
     <record id='library_book_action' model='ir.actions.act_window'>
         <field name="name">Library Books</field>
         <field name="res_model">library.book</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,m2m_group</field>
     </record>
+
+    <!-- <record id='library_book_action' model='ir.actions.act_window'>
+        <field name="name">Library Books</field>
+        <field name="res_model">library.book</field>
+        <field name="view_mode">kanban,tree,form</field>
+    </record> -->
 
     <menuitem name="My Library" id="library_base_menu" />
     <menuitem name="Books" id="library_book_menu" parent="library_base_menu" action="library_book_action"/>
@@ -17,7 +23,7 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <button name="book_rent" string="Rent this book" type="object" class="btn-primary"/>
+                    <!-- <button name="book_rent" string="Rent this book" type="object" class="btn-primary"/> -->
                     <!-- <button name="return_all_books" string="Return all book" type="object" class="btn-primary"/> -->
                     <button name="make_available" string="Make Available" type="object" class="btn-primary"/>
                     <button name="make_borrowed" string="Make Borrowed" type="object" class="btn-primary" />
@@ -26,6 +32,11 @@
                     <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button class="oe_stat_button" name="%(library_book_rent_action)d" type="action" icon="fa-book" context="{'search_default_book_id': active_id}">
+                            <field string="Rent Orders" name="rent_count" widget="statinfo"/>
+                        </button>
+                    </div>
                     <group>
                         <group>
                             <field name="name"/>
@@ -38,16 +49,26 @@
                             <!-- <field name="old_edition" /> -->
                         </group>
                         <group>
-                            <field name="active"/>
+                            <field name="active" invisible="1"/>
                             <field name="short_name"/>
                             <field name="date_release"/>
                             <field name="date_updated"/>
                             <field name="cover" widget="image" class="oe_avatar"/>
                             <field name="reader_rating"/>
+                            <field name="color" widget="int_color"/>
+                            <!-- <field name="color"/> -->
                         </group>
                     </group>
                 </sheet>
             </form>
+        </field>
+    </record>
+
+    <record id="library_book_view_author" model="ir.ui.view">
+        <field name="name">Library Book Author</field>
+        <field name="model">library.book</field>
+        <field name="arch" type="xml">
+            <m2m_group m2m_field="author_ids" color_field="color"></m2m_group>
         </field>
     </record>
 
@@ -78,5 +99,7 @@
             </search>
         </field>
     </record>
+
+
 
 </odoo>
